--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <section>
         <div>
             <button id="sfx-button">SFX</button>
+            <button id="restart-button">Restart</button>
         </div>
-        <canvas id="game-canvas" width="800" height="600"></canvas>
+        <canvas id="game-canvas"></canvas>
         <!-- <script type="application/javascript" src="./main.js"></script> -->
         <div>
             <button id="github-button">github</button>
