added win lose condition and tie break and basic post game stats and restart game

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <button id="sound-button" class="ui circular icon button">
                 <i class="volume up icon"></i>
             </button>
-            <!-- <button id="restart-button" class="ui circular icon button">
+            <button id="restart-button" class="ui circular icon button">
                 <i class="undo alternate icon"></i>
-            </button> -->
+            </button>
             
             <ul>
                 <li>Click to toss ball / to swing at ball</li>
