refactored ball status tracking

--- a/index.html
+++ b/index.html
@@ -44,3 +44,13 @@
 </body>
 
 </html>
+
+<!-- list of icons to use for buttons
+https://fontawesome.com/v5.15/icons/crosshairs?style=solid
+https://fontawesome.com/v5.15/icons/github?style=brands
+https://fontawesome.com/v5.15/icons/linkedin?style=brands
+https://fontawesome.com/v5.15/icons/linkedin-in?style=brands
+https://fontawesome.com/v5.15/icons/volume-mute?style=solid
+https://fontawesome.com/v5.15/icons/volume-up?style=solid
+
+ -->
