added stylized buttosn with hover transitions

--- a/index.html
+++ b/index.html
@@ -35,16 +35,6 @@
                 <button id="restart-button" class="">
                     <i class="fa-solid fa-rotate-left"></i>
                 </button>
-                <!-- <div class="instructions">
-                    <button id="instructions-button">
-                        <i class="fa-solid fa-circle-info"></i>
-                    </button>
-                    <ul>
-                        <li>Click to toss/swing</li>
-                        <li>Cursor to aim</li>
-                        <li>WASD to move</li>
-                    </ul>
-                </div> -->
             </div>
         </section>
         <section class="game-screen">
@@ -52,7 +42,7 @@
         </section>
         <section class="nav-links">
             <div class="info">
-                <a id="github-link" class="ui circular linkedin icon button" 
+                <a id="github-link" class="" 
                     href="https://github.com/YWBK/tennis_game">
                     <i class="fab fa-github"></i>
                 </a>
