--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <script src="https://kit.fontawesome.com/f73350b7d2.js" crossorigin="anonymous"></script>
+        <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="./dist/main.css" />
         <script src="./dist/main.js"></script>
         <title>Project Name</title>
