refactor for linkedin

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta property="og:title" content="2D Tennis, a tennis game" />
+        <meta property="og:image" content="./src/assets/game_screen.png" />
+        <meta
+          property="og:description"
+          content="A tennis video game"
+        />
+        <meta
+          property="og:url"
+          content="https://ywbk.github.io/tennis_game/"
+        />
         <script src="https://kit.fontawesome.com/f73350b7d2.js" crossorigin="anonymous"></script>
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="./dist/main.css" />
