--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta property="og:title" content="2D Tennis, a tennis game" />
-        <meta name="image" property="og:image" content="./src/assets/game_screen.png">
+        <meta name="image" property="og:image" content="./src/assets/images/game_screen.png">
         <meta
           property="og:description"
           content="A tennis video game"
