--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     
 <head>
+        <title>2D Tennis</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -16,10 +17,9 @@
           content="https://ywbk.github.io/tennis_game/"
         />
         <script src="https://kit.fontawesome.com/f73350b7d2.js" crossorigin="anonymous"></script>
-        <link rel="shortcut icon" href="#">
+        <link rel="icon" type="image/png" href="./src/assets/images/favicon-16x16.png">
         <link rel="stylesheet" href="./dist/main.css" />
         <script src="./dist/main.js"></script>
-        <title>Project Name</title>
 </head>
 <body>
     <div class="modal-title active">
