add info modal that pauses game

--- a/index.html
+++ b/index.html
@@ -34,9 +34,30 @@
             <p>Click to toss ball / to swing at ball.</p>
             <p>Use cursor location to direct ball path.</p>
             <p>Press WASD to move.</p>
+            <br>
+            <p>Make sure to mind your timing and</p>
+            <p>remember to serve diagonally into the service box.</p>
+            <br>
             <p>Good luck and have fun!</p>
         </div>
     </div>
+    <div class="modal-info">
+        <div class="modal-content">
+            <h2>2D Tennis, a tennis game</h2>
+            <br>
+            <h4>Paused</h4>
+            <p>Click anywhere to Resume.</p>
+            <br>
+            <h4>Instructions:</h4>
+            <p>Click to toss ball / to swing at ball.</p>
+            <p>Use cursor location to direct ball path.</p>
+            <p>Press WASD to move.</p>            
+            <br>
+            <p>Make sure to mind your timing and</p>
+            <p>remember to serve diagonally into the service box.</p>
+        </div>
+    </div>
+
     <section class="game">
         <section class="game-peripheral">
             <div class="info">
@@ -46,6 +67,9 @@
                 <button id="restart-button" class="">
                     <i class="fa-solid fa-rotate-left"></i>
                 </button>
+                <button id="instructions-button">
+                    <i class="fa-solid fa-info"></i>
+                </button>
             </div>
         </section>
         <section class="game-screen">
@@ -54,12 +78,19 @@
         <section class="nav-links">
             <div class="info">
                 <a id="github-link" class="" 
-                    href="https://github.com/YWBK/tennis_game">
-                    <i class="fab fa-github"></i>
+                    href="https://github.com/YWBK/tennis_game"
+                    target="_blank">
+                        <i class="fab fa-github"></i>
                 </a>
                 <a id="linkedin-link" class="" 
-                    href="https://www.linkedin.com/in/bill-kim-88987a42/">
-                    <i class="fab fa-linkedin-in"></i>
+                    href="https://www.linkedin.com/in/ywbk/"
+                    target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a id="angellist-link" class="" 
+                    href="https://www.angel.co/u/ywbk"
+                    target="_blank">
+                        <i class="fab fa-angellist"></i>
                 </a>
             </div>
         </section>
